Now fetch the portfolio data and fetch the available trades. Still doesnt take action on it.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 passiv_api_key=<put_your_api_key_here>
 passiv_api_url=https://api.passiv.com/api/v1
 log_level=INFO
+portfolio_name="<portfolio_name>"
